tests/baselines/reference/genericCallsWithoutParens.errors.txt
==== tests/cases/compiler/genericCallsWithoutParens.ts (4 errors) ====
    function f<T>() { }
    var r = f<number>; // parse error
                     ~
!!! error TS1003: Identifier expected.
              ~~~~~~
!!! error TS2095: Could not find symbol 'number'.
    
    class C<T> {
        foo: T;
    }
    var c = new C<number>; // parse error
                         ~
!!! error TS1003: Identifier expected.
                  ~~~~~~
!!! error TS2095: Could not find symbol 'number'.
    
    